--- a/usage-plotly-in-jupyter-lab.ipynb
+++ b/usage-plotly-in-jupyter-lab.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 주피터 랩에서 plotly 라이브러리를 사용하기 위한 설정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
