Change directory structure & Upload Posts

--- a/posts/Fiance/FDS-outlier-detection.ipynb
+++ b/posts/Fiance/FDS-outlier-detection.ipynb
@@ -84,24 +84,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credit_data = pd.read_csv('./data/FDS_outlier_detection/creditcard.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -298,12 +280,15 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "credit_data = pd.read_csv('../_data/FDS_outlier_detection/creditcard.csv')\n",
     "credit_data.head()"
    ]
   },
@@ -417,7 +402,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: left; margin-left: 30px;\">\n",
-    "    <img src=\"./images/FDS_outlier_Detection/img001.jpg\" width=\"400px\"/>\n",
+    "    <img src=\"../_images/FDS_outlier_Detection/img001.jpg\" width=\"600px\"/>\n",
     "</div>"
    ]
   },
@@ -473,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -494,9 +479,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -529,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +603,7 @@
        "(1194, 30)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -835,13 +827,6 @@
    "source": [
     "최근 딥러닝 기법을 적용하여 **오토인코더(Auto-encoder)**, **GAN 알고리즘**을 이용하여 이상 탐지에 활용되고 있음"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
